fixed recurring z-index issue

--- a/client/src/components/payment-form/payment-form.styles.css
+++ b/client/src/components/payment-form/payment-form.styles.css
@@ -6,6 +6,6 @@
   justify-content: center;
 }
 
-.btn {
+.payment-button {
   margin-left: 50% !important;
 }
